--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "cpnt201-a4",
   "private": true,
   "version": "0.0.0",
+  "license": "MIT",
   "author": "Sterling Smith <sterling12311@gmail.com>",
   "type": "module",
   "scripts": {
